--- a/style.css
+++ b/style.css
@@ -75,5 +75,9 @@ h1 {
 
 .item {
   border: 0.125rem dashed hsl(210, 17%, 98%);
-  padding: 1rem;
+  padding: 0.5rem 1rem 1rem;
+}
+
+.item h2 {
+  margin-bottom: 0.5rem;
 }
