--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ h1 {
   -moz-text-fill-color: transparent;
 }
 
+:not(h1)::selection {
+  background-color: hsl(323, 80%, 43%);
+  color: hsl(210, 17%, 98%);
+}
+
 .item {
   border: 0.125rem dashed hsl(210, 17%, 98%);
   padding: 0.5rem 1rem 1rem;
@@ -80,4 +85,10 @@ h1 {
 
 .item h2 {
   margin-bottom: 0.5rem;
+}
+
+.card-container {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 1rem;
 }
