--- a/style.css
+++ b/style.css
@@ -91,4 +91,7 @@ h1 {
   display: flex;
   flex-flow: row wrap;
   gap: 1rem;
+  border-radius: 0.5rem;
+  padding: 1rem;
+  background-color: hsl(0, 0%, 85%);
 }
