remove card container and style host

--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -10,7 +10,7 @@
   color: hsl(210, 17%, 98%);
 }
 
-.card {
+:host {
   max-width: 18rem;
   display: flex;
   flex-direction: column;
@@ -48,8 +48,14 @@ img,
   color: hsl(225, 6%, 30%);
 }
 
-button,
-::slotted(button) {
+.actions {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 0.5rem;
+}
+
+.actions button,
+.actions ::slotted(button) {
   width: 100%;
   padding: 0.8rem 0.5rem;
   border-radius: 0.8rem;
@@ -67,8 +73,8 @@ button,
   transition: background-color 200ms ease-in-out;
 }
 
-button:hover,
-::slotted(button):hover {
+.actions button:hover,
+.actions ::slotted(button):hover {
   background-image: linear-gradient(
     to right,
     hsl(219, 91%, 37%),
@@ -77,8 +83,8 @@ button:hover,
   background-color: hsl(219, 92%, 42%);
 }
 
-button:focus-visible,
-::slotted(button):focus-visible {
+.actions button:focus-visible,
+.actions ::slotted(button):focus-visible {
   outline: 0.125rem solid hsl(219, 92%, 42%);
   outline-offset: 0.0625rem;
 }
