--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ h1 {
 .card-container {
   display: flex;
   flex-flow: row wrap;
+  align-items: start;
   gap: 1rem;
   border-radius: 0.5rem;
   padding: 1rem;
