--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -6,8 +6,8 @@
 }
 
 ::selection {
-  background-color: var(--color-selection);
-  color: var(--color-neutral-100);
+  background-color: var(--color-selection, hsl(261, 73%, 51%));
+  color: var(--color-neutral-100, hsl(210, 17%, 98%));
 }
 
 :host {
@@ -15,8 +15,8 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  background-color: var(--color-neutral-100);
-  color: var(--color-neutral-900);
+  background-color: var(--color-neutral-100, hsl(210, 17%, 98%));
+  color: var(--color-neutral-900, hsl(225, 6%, 13%));
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   border-radius: 0.8rem;
   box-shadow: 0 0.5rem 1rem hsla(0, 0%, 0%, 0.15);
@@ -52,7 +52,7 @@
 .description {
   font-size: 1.0625rem;
   font-weight: 300;
-  color: var(--color-neutral-800);
+  color: var(--color-neutral-800, hsl(225, 6%, 23%));
 }
 
 .action {
@@ -71,7 +71,7 @@
     hsl(219, 92%, 42%),
     hsl(237, 64%, 63%)
   );
-  color: var(--color-neutral-100);
+  color: var(--color-neutral-100, hsl(210, 17%, 98%));
   border: none;
   appearance: none;
   font-size: 1rem;
