--- a/style.css
+++ b/style.css
@@ -107,3 +107,37 @@ body {
     justify-content: start;
   }
 }
+
+.footer {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
+  background-color: hsl(229, 12%, 19%);
+  padding: 0.5rem;
+}
+
+.footer .link {
+  transition: transform 120ms ease-in-out;
+}
+
+.footer .link:hover {
+  transform: scale(1.25);
+}
+
+.footer .link:active {
+  transform: scale(1.1);
+}
+
+.footer .github {
+  width: 1.2rem;
+  height: 1.2rem;
+  fill: hsl(0, 0%, 100%);
+}
+
+.footer .heart {
+  width: 1.1rem;
+  height: 1.1rem;
+  fill: hsl(340, 100%, 50%);
+}
